--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@headlessui/react": "^2.2.0",
-    "@hello-pangea/dnd": "^18.0.1",
+    "@hello-pangea/dnd": "^16.5.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -36,11 +36,8 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.13",
     "@react-spring/web": "^10.0.1",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,9 +45,8 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.485.0",
-    "next": "14.1.0",
+    "next": "^14.2.29",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.2.1",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
