--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
     "@types/react-datepicker": "^6.2.0",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
