Fix: Add npm registry fallbacks and pin @floating-ui/react version

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,8 @@
 legacy-peer-deps=true
 case-sensitive-paths=true
 engine-strict=true
+registry=https://registry.npmjs.org/
+fetch-retry-mintimeout=20000
+fetch-retry-maxtimeout=120000
+network-timeout=120000
+@floating-ui:registry=https://registry.yarnpkg.com/
