--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -36,11 +36,11 @@ enabled = false
 port = 54329
 # Specifies when a server connection can be reused by other clients.
 # Configure one of the supported pooler modes: `transaction`, `session`.
-pool_mode = "transaction"
+pool_mode = "session"
 # How many server connections to allow per user/database pair.
-default_pool_size = 20
+default_pool_size = 1
 # Maximum number of client connections allowed.
-max_client_conn = 100
+max_client_conn = 1
 
 # [db.vault]
 # secret_key = "env(SECRET_VALUE)"
