--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-shepherd": "^6.1.9",
     "react-tilt": "^1.0.2",
     "recharts": "^2.15.3",
+    "shepherd.js": "^14.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "ts-node": "^10.9.2"
